--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,16 +2,16 @@ pipeline {
     agent any
 
     environment {
-        AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID ')
+        AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
-        AWS_DEFAULT_REGION    = 'ap-south-1'
+        AWS_REGION            = 'ap-south-1' // Change this if you want another region
     }
 
     stages {
-
         stage('Checkout Code') {
             steps {
-                checkout scm
+                git branch: 'main',
+                    url: 'https://github.com/sayali12-cloud/terraform-ec2-jenkins.git'
             }
         }
 
@@ -21,21 +21,9 @@ pipeline {
             }
         }
 
-        stage('Terraform Validate') {
-            steps {
-                sh 'terraform validate'
-            }
-        }
-
         stage('Terraform Plan') {
             steps {
                 sh 'terraform plan'
-            }
-        }
-
-        stage('Approval') {
-            steps {
-                input message: 'Do you want to apply Terraform changes?'
             }
         }
 
@@ -45,15 +33,7 @@ pipeline {
             }
         }
     }
-
-    post {
-        success {
-            echo 'Terraform deployment completed successfully 🚀'
-        }
-        failure {
-            echo 'Terraform deployment failed ❌'
-        }
-    }
 }
+
 
 
