Update git branch from 'main' to 'master'

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
   stages {
         stage('Checkout Code') {
             steps {
-                git branch: 'main',
+                git branch: 'master',
                     url: 'https://github.com/sayali12-cloud/terraform-ec2-jenkins.git'
             }
         }
